# Python-Packages

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  PYPI_README.md  PYPI_UPLOAD_INSTRUCTIONS.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  best_lstm_model.pth  build_and_release.bat  check_env.py  check_meridianalgo.py  comprehensive_test.py  demo.py  dev-requirements.txt  diagnose.py  fixed_meridianalgo_test.py  lint_report.txt  lint_report_v2.txt  minimal_check.py  pyproject.toml  pytest.ini  quick_check.py  quick_test.py  quick_verify.py  requirements.txt  ruff_errors.json  run_test.bat  run_test.py  setup.py  setup_and_test.bat  setup_dependencies.py  setup_environment.bat  test_all_components.py  test_core.py  test_env.py  test_import.py  test_imports.py  test_meridianalgo.py  (+8 more)
.agent/workflows/: deploy-pypi.md
.github/workflows/: ci.yml  deploy.yml  publish-pypi.yml
docs/: API_REFERENCE.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  README.md  RELEASE_NOTES.md  TESTING_SUMMARY.md  benchmarks.md  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: portfolio_management.md  technical_indicators.md
examples/: 01_getting_started.py  02_basic_usage.py  03_advanced_trading_strategy.py  04_comprehensive_examples.py  06_transaction_cost_optimization.py  07_derivatives_and_options.py  08_credit_risk.py  09_volatility_models.py  10_monte_carlo.py  11_portfolio_insurance.py  12_benchmark_analytics.py  13_scenario_analysis.py  README.md  advanced_trading_strategy.py  basic_usage.py  comprehensive_examples.py  quant_examples.py  transaction_cost_optimization_example.py
meridianalgo/: Makefile  README.md  __init__.py  advanced_risk.py  algorithmic_trading.py  alternative_assets.py  api.py  cli.py  config.py  core.py  crypto.py  crypto_expanded.py  derivatives.py  diversification.py  fixed_income.py  forex.py  metrics.py  ml.py  ml.py.new  requirements-dev.txt  requirements.txt  statistics.py  technical_indicators.py
meridianalgo-5.0.0/meridianalgo/: crypto_expanded.py
meridianalgo/alternative/: assets.py
meridianalgo/analytics/: __init__.py  attribution.py  benchmark.py  drawdown.py  performance.py  risk_analytics.py  tear_sheets.py
meridianalgo/backtesting/: __init__.py  advanced.py  backtester.py  engine.py  event_driven.py  events.py  market_simulator.py  order_management.py  performance_analytics.py
meridianalgo/computing/: distributed.py
meridianalgo/core/: __init__.py  api.py  base.py  statistics.py
meridianalgo/credit/: __init__.py  models.py
meridianalgo/data/: __init__.py  exceptions.py  free_providers.py  models.py  processing.py  providers.py  storage.py  streaming.py
meridianalgo/data_processing/: __init__.py  data_cleaner.py  data_validator.py  feature_engineering.py  market_data.py
meridianalgo/derivatives/: __init__.py  core.py
scripts/: check_imports.py  check_installation.py  setup_dependencies.py
tests/: README.md  __init__.py  debug_test.py  diagnostic_test.py  minimal_test.py  run_all_tests.py  simple_import_test.py  simple_test.py  test_advanced_signals.py  test_all.py  test_analytics.py  test_backtesting.py  test_benchmark_analytics.py  test_cli.py  test_comprehensive_suite.py  test_core.py  test_core_module.py  test_credit.py  test_data_infrastructure.py  test_kelly_criterion.py  test_liquidity.py  test_machine_learning.py  test_meridianalgo_basic.py  test_meridianalgo_comprehensive.py  test_metrics.py  test_ml_module.py  test_monte_carlo.py  test_portfolio_insurance.py  test_portfolio_management.py  test_quant.py  test_risk_analysis.py  test_scenario_analysis.py  test_signals.py  test_statistics_module.py  test_suite.py  test_technical_analysis.py  test_technical_indicators.py  test_top_level_api.py  test_volatility_models.py  verify_imports.py
(+122 files in other folders)
