[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridianalgo"
version = "7.1.0"
description = "MeridianAlgo Quant Packages - The Complete Quantitative Finance Platform for Professional Developers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Meridian Algorithmic Research Team", email = "support@meridianalgo.com"}
]
keywords = [
    "quantitative-finance",
    "algorithmic-trading",
    "trading",
    "finance",
    "portfolio-optimization",
    "risk-management",
    "portfolio-analytics",
    "execution-algorithms",
    "vwap",
    "twap",
    "market-impact",
    "market-microstructure",
    "liquidity",
    "order-book",
    "statistical-arbitrage",
    "pairs-trading",
    "mean-reversion",
    "factor-models",
    "options-pricing",
    "high-frequency-trading",
    "regime-detection",
    "machine-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "yfinance>=0.2.40",
    "requests>=2.32.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ta>=0.11.0",
    "tqdm>=4.66.0",
    "joblib>=1.4.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=2.0.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "statsmodels>=0.14.1",
    "hmmlearn>=0.3.2",
]
optimization = [
    "cvxpy>=1.5.0",
    "cvxopt>=1.3.2",
]
volatility = [
    "arch>=7.0.0",
]
data = [
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "polygon-api-client>=1.14.0",
]
distributed = [
    "ray>=2.9.0",
    "dask>=2024.1.0",
]
full = [
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "statsmodels>=0.14.1",
    "hmmlearn>=0.3.2",
    "cvxpy>=1.5.0",
    "arch>=7.0.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
]
all = [
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "statsmodels>=0.14.1",
    "hmmlearn>=0.3.2",
    "cvxpy>=1.5.0",
    "cvxopt>=1.3.2",
    "arch>=7.0.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "polygon-api-client>=1.14.0",
    "ray>=2.9.0",
]

[project.urls]
"Bug Reports" = "https://github.com/MeridianAlgo/Python-Packages/issues"
"Source" = "https://github.com/MeridianAlgo/Python-Packages"
"Documentation" = "https://meridianalgo.readthedocs.io"
"Changelog" = "https://github.com/MeridianAlgo/Python-Packages/blob/main/CHANGELOG.md"

[project.scripts]
meridianalgo = "meridianalgo.cli:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["meridianalgo"]
